# rtte

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE.md  TODO.md  build.sh  changelog.md  demo.toml  readme.md  rustfmt.toml  todo.md  vcpkg.json
.github/workflows/: rust.yaml  rust.yml
assets/enemy/: enemy.xcf
assets/player/: player.xcf
assets/scenes/: scene.scn.ron
demo/: mission.yaml
example/: example.toml
gfx/: bridge.xcf  character.xcf  grass.xcf  snow.xcf  trace.xcf  water.xcf
resources/: demo.toml
src/: action.rs  animation.rs  bounding_box.rs  building.rs  camera.rs  character.cpp  character.h  cone_of_view.rs  console.rs  constants.rs  cursor.rs  debug.rs  direction.rs  enemy.cpp  enemy.h  enemy.rs  entity.cpp  entity.h  game.cpp  game.h  game.rs  gizmo.rs  gui.rs  input.cpp  input.h  line_of_sight.rs  main.cpp  main.rs  map.rs  mission.rs  movable.rs  movement.rs  navmesh.cpp  navmesh.h  navmesh.rs  object.cpp  object.h  object.rs  obstacle.rs  path.cpp  (+24 more)
src/component/: animation.rs  body.rs  enemy.rs  field_of_view.rs  image.rs  melee_attack.rs  mod.rs  movement.rs  object.rs  player.rs  polygon.rs  position.rs  selection.rs  shape.rs  size.rs  sprite.rs  view.rs
src/components/: enemy.rs  mod.rs  movable.rs  movement.rs  object.rs  player.rs  position.rs  renderable.rs  selectable.rs  selection.rs  size.rs  sprite.rs  view.rs
src/entity/: character.rs  enemy.rs  image.rs  mod.rs  object.rs  player.rs  polygon.rs
src/entity/shared/: animation.rs  mod.rs
src/event/: knife_melee_attack.rs  mod.rs  select_enemy_or_place_mark.rs  select_or_move_player.rs  select_or_stop_player.rs  set_cursor.rs
src/geometry/: line.rs  line_segment.rs  mesh.rs  mod.rs  triangle.rs  vec2.rs
src/gui/: base.rs  character.rs  enemy.rs  mesh.rs  mod.rs  object.rs
src/resource/: alarm.rs  cursor.rs  mark.rs  mod.rs  offset.rs  physics.rs  target_area.rs  view_mark.rs
src/resources/: mod.rs  view_mark.rs
src/shared/: direction.rs  mod.rs  movement.rs
src/system/: animation.rs  direction.rs  draw_cursor.rs  draw_entity.rs  draw_entity_debug.rs  draw_entity_ysorted.rs  draw_field_of_view.rs  draw_fps.rs  draw_mark.rs  draw_navmesh.rs  draw_path.rs  draw_target.rs  draw_target_area.rs  draw_view.rs  field_of_view.rs  field_of_view_direction.rs  field_of_view_movement_direction.rs  field_of_view_shift.rs  game_over.rs  knife_melee_attack.rs  knife_melee_attack_kill.rs  mark_in_field_of_view.rs  mark_in_view.rs  mod.rs  movement.rs  physics.rs  player_in_enemy_view.rs  players_reach_target_area.rs  reach_target_area.rs  reset_path.rs  select_enemy_or_place_mark.rs  select_or_move_player.rs  select_or_move_players.rs  select_or_stop_player.rs  select_or_stop_players.rs  set_cursor.rs  some_player_in_enemy_field_of_view.rs  some_player_in_enemy_view.rs  view.rs  view_current_direction.rs  (+2 more)
src/systems/: mod.rs  movement.rs  view.rs
src/ui/: actions.rs  mod.rs  players.rs
