[package]
edition = "2021"
name = "rtte"
version = "0.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.16.1", features = ["bevy_dev_tools", "custom_cursor", "dynamic_linking"]}
bevy_minibuffer = "0.4.0"
vleue_navigator = "0.13.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
