[package]
edition = "2021"
name = "rtte"
version = "0.12.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.17.3", features = ["bevy_dev_tools", "custom_cursor", "dynamic_linking"]}
maths-rs = "0.2.7"
vleue_navigator = {git = "https://github.com/vleue/vleue_navigator", branch = "main"}

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
